# sandtris-raylib-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/: 24x24.aseprite  atlas.h  atlasfile.h  atlasfile.rtp  brick.aseprite  sandtetris.aseprite
assets/aseprite/: 16x16.aseprite  combo_sheet.aseprite  logo.aseprite  magic_circle.aseprite  sandtetris.aseprite  wizard.aseprite  wizard_altered.aseprite  wizard_concept.aseprite
include/: atlas.h  gamelogic.hpp  helper.hpp  mino.hpp  rpng.h  table.hpp
src/: atlas.cpp  main.cpp  mino.cpp  table.cpp
